force-app/main/default/objects/Login_OTP__c/Login_OTP__c.object-meta.xml
<CustomObject>
    <description>Stores OTP codes for passwordless login</description>
    <label>Login OTP</label>
    <nameField>
        <displayFormat>OTP-{0000000}</displayFormat>
        <label>Login OTP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Login OTPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>