force-app/main/default/objects/Login_OTP__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <description>DateTime when this OTP expires</description>
    <label>Expires At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>