force-app/main/default/objects/Login_OTP__c/fields/Used__c.field-meta.xml
<CustomField>
    <fullName>Used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this OTP has been used</description>
    <label>Used</label>
    <type>Checkbox</type>
</CustomField>