force-app/main/default/objects/Login_OTP__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User associated with this OTP</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Login OTPs</relationshipLabel>
    <relationshipName>Login_OTPs</relationshipName>
    <type>Lookup</type>
</CustomField>